<resources>
    <string name="app_name">MSLU Schedule</string>

    <string name="add_group_title">Add a group</string>
    <string name="group_already_added">The group is already added.</string>
    <string name="add_teacher_title">Add a teacher</string>
    <string name="teacher_already_added">The teacher is already added.</string>
    <string name="button_add">Add</string>
    <string name="button_cancel">Cancel</string>
    <string name="fab_add_schedule_main_description">Add a schedule</string>
    <string name="fab_add_schedule_studygroup_description">Add a group schedule</string>
    <string name="fab_add_schedule_teacher_description">Add a teacher schedule</string>
    <string name="fab_edit_note">Edit a note</string>

    <string name="faculty">Faculty</string>
    <string name="course">Course</string>
    <string name="group">Group</string>
    <string name="teacher">Teacher</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="navigation_drawer_studygroups">Groups</string>
    <string name="navigation_drawer_teachers">Teachers</string>
    <string name="navigation_drawer_settings">Settings</string>

    <string name="action_delete_schedule">Delete the schedule</string>

    <string name="dialog_delete_container_title">Are you sure you want to delete the schedule?</string>
    <string name="dialog_delete_container_message">The schedule for the selected group/teacher and all the data associated with it (e.g notes) will be deleted.</string>
    <string name="button_delete">Delete</string>

    <string name="monday">Monday</string>
    <string name="tuesday">Tuesday</string>
    <string name="wednesday">Wednesday</string>
    <string name="thursday">Thursday</string>
    <string name="friday">Friday</string>
    <string name="saturday">Saturday</string>
    <string name="sunday">Sunday</string>

    <string name="item_blanklesson">No classes this day</string>

    <string name="snackbar_internet_unavailable">No network connection available</string>

    <string name="messsage_schedule_update_successful">The schedule for this week was updated</string>

    <string name="main_background_image_description">Image of students talking to each other.</string>
    <string name="view_main_empty_message">Add a new schedule or choose one from the list.</string>

    <string name="action_show_today">Highlight today\’s date</string>
    <string name="action_update_schedule">Update</string>
    <string name="error_general">An error occurred &#128542;</string>
    <string name="error_website_unavailable">Could not connect to the schedule website</string>
    <string name="snackbar_week_init_retry">Retry</string>
    <string name="text_week_no_classes">No classes this week. Good luck!</string>
    <string name="button_week_show_weekdays">Show weekdays</string>
    <string name="button_week_hide_weekdays">Hide weekdays</string>
    <string name="week_background_image_description">Image of a guy resting on a chair.</string>

    <string name="edittext_weekday_note">Enter a note</string>
    <string name="textview_other_notes_header">Other notes</string>
    <string name="textview_zeronotes">No notes for this day</string>
    <string name="snackbar_note_deleted">The note was deleted</string>
    <string name="snackbar_action_undo">Undo</string>
    <string name="weekday_background_image_description">Image of a girl with a long list of notes.</string>

    <string name="imageview_dayitem_description">Notes</string>
    <string name="imageview_subject_description">Subject</string>
    <string name="imageview_time_description">Time</string>
    <string name="imageview_groups_description">Group</string>
    <string name="imageview_classroom_description">Classroom</string>
    <string name="imageview_weekdays_description">Weekdays</string>

    <string name="class_same_time_description">This class starts at the same time as the class higher in the list</string>

    <string name="activity_lesson_info_title">Details</string>

    <string name="error_network_api_version">This schedule was downloaded from a currently not supported website and can\’t be updated</string>
    <string name="error_no_data_on_server">The schedule website currently doesn\’t have the requested data</string>

    <!-- Settings -->
    <string name="activity_settings_title">Settings</string>
    <string name="pref_header_appearence">Appearance</string>
    <string name="pref_header_schedule">Schedule</string>
    <string name="pref_header_about">About</string>

    <string-array name="pref_theme_entries">
        <item>Light</item>
        <item>Dark</item>
        <item>Auto</item>
    </string-array>

    <string name="pref_theme_title">Theme</string>
    <string name="pref_theme_default_value">Light</string>
    <string name="pref_show_add_schedule_title">Show `Add a Schedule` button</string>
    <string name="pref_full_subjects_title">Full subject names</string>
    <string name="pref_hide_pe_classes_title">Hide Physical Education classes</string>
    <string name="pref_hide_self_study_classes_title">Hide classes on self-study days</string>
    <string name="pref_next_update_summary">Will take effect after the next schedule update</string>
    <string name="pref_send_feedback_title">Send Feedback</string>
    <string name="pref_privacy_policy_title">Privacy Policy</string>
    <string name="pref_libraries_title">Open-source libraries</string>
    <string name="pref_app_version_title">Version</string>

    <!-- Walkthrough -->
    <string name="tutorial_welcome_title">Welcome to `MSLU Schedule`</string>
    <string name="tutorial_welcome_description">Press to continue.</string>
    <string name="tutorial_add_schedule_title">Add a schedule</string>
    <string name="tutorial_add_schedule_description">Schedules for both groups and teachers are supported.</string>
    <string name="tutorial_navigation_view_title">Navigation view</string>
    <string name="tutorial_navigation_view_description">Check the list of the added schedules or change the settings here.</string>
    <string name="tutorial_action_menu_title">Schedule menu</string>
    <string name="tutorial_action_menu_description">Update the schedule for the week from here or just pull the screen down to update it.</string>
    <string name="tutorial_finish_title">That\’s all</string>
    <string name="tutorial_finish_description">Thank you!</string>

    <string name="key_theme" translatable="false">key_theme</string>
    <string name="key_full_subjects" translatable="false">key_full_subjects</string>
    <string name="key_show_add_schedule" translatable="false">key_show_add_schedule</string>
    <string name="key_hide_pe_classes" translatable="false">key_hide_pe_classes</string>
    <string name="key_hide_self_study_classes" translatable="false">key_hide_self_study_classes</string>
    <string name="key_send_feedback" translatable="false">key_send_feedback</string>
    <string name="key_libraries" translatable="false">key_libraries</string>
    <string name="key_about" translatable="false">key_about</string>
    <string name="send_feedback_uri" translatable="false">"mailto:msluapp@protonmail.com"</string>
    <string name="privacy_policy_url" translatable="false">"https://sites.google.com/view/msluapp"</string>

    <string-array name="library_list" translatable="false">
        <item>Android SDK</item>
        <item>AndroidX</item>
        <item>Apache POI</item>
        <item>Dagger</item>
        <item>Fabric</item>
        <item>Firebase</item>
        <item>jsoup</item>
        <item>JUnit</item>
        <item>Kotlin</item>
        <item>LeakCanary</item>
        <item>Material Components for Android</item>
        <item>Material Design Icons</item>
        <item>Mockito</item>
        <item>Retrofit</item>
        <item>RxAndroid</item>
        <item>RxJava</item>
        <item>RxKotlin</item>
        <item>Spotlight</item>
        <item>ThreeTen Backport</item>
        <item>Timber</item>
    </string-array>

    <string-array name="library_urls" translatable="false">
        <item>https://developer.android.com/studio/terms</item>
        <item>https://github.com/aosp-mirror/platform_frameworks_support</item>
        <item>https://github.com/apache/poi</item>
        <item>https://github.com/google/dagger</item>
        <item>https://fabric.io/licenses</item>
        <item>https://www.firebase.com/terms/oss.html</item>
        <item>https://github.com/jhy/jsoup</item>
        <item>https://github.com/junit-team/junit4</item>
        <item>https://github.com/JetBrains/kotlin</item>
        <item>https://github.com/square/leakcanary</item>
        <item>https://github.com/material-components/material-components-android</item>
        <item>https://github.com/templarian/MaterialDesign</item>
        <item>https://github.com/mockito/mockito</item>
        <item>https://github.com/square/retrofit</item>
        <item>https://github.com/ReactiveX/RxAndroid</item>
        <item>https://github.com/ReactiveX/RxJava</item>
        <item>https://github.com/ReactiveX/RxKotlin</item>
        <item>https://github.com/TakuSemba/Spotlight</item>
        <item>https://github.com/ThreeTen/threetenbp</item>
        <item>https://github.com/JakeWharton/timber</item>
    </string-array>
</resources>
