<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:id="@+id/swipe_refresh_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recycler_view_days"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:saveEnabled="false" />

            <LinearLayout
                android:id="@+id/view_no_classes"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/surface"
                android:clickable="true"
                android:focusable="true"
                android:gravity="center"
                android:orientation="vertical"
                android:visibility="gone">

                <ImageView
                    android:layout_width="200dp"
                    android:layout_height="200dp"
                    android:contentDescription="@string/week_background_image_description"
                    android:src="@drawable/ic_resting_guy" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginHorizontal="64dp"
                    android:layout_marginTop="8dp"
                    android:text="@string/text_week_no_classes"
                    android:textAlignment="center"
                    android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle1"
                    android:textColor="@color/primary_text"
                    android:textSize="14sp" />

            </LinearLayout>

            <com.google.android.material.progressindicator.LinearProgressIndicator
                android:id="@+id/progressbar_update"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="top|center_horizontal"
                android:background="@color/colorPrimaryLight"
                android:elevation="2dp"
                android:indeterminate="true"
                android:paddingTop="24dp"
                android:paddingBottom="24dp"
                android:visibility="invisible"
                app:indicatorColor="@color/colorAccent"
                tools:ignore="UnusedAttribute" />

            <com.google.android.material.progressindicator.CircularProgressIndicator
                android:id="@+id/progressbar_init"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:elevation="2dp"
                android:indeterminate="true"
                android:visibility="gone"
                app:indicatorColor="@color/colorAccent"
                tools:ignore="UnusedAttribute" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_days_visibility"
                style="@style/Widget.MaterialComponents.Button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|center_horizontal"
                android:layout_marginBottom="13dp"
                android:paddingLeft="16dp"
                android:paddingTop="18dp"
                android:paddingRight="16dp"
                android:paddingBottom="18dp"
                android:text="@string/button_week_show_weekdays"
                android:textColor="@color/primary_text"
                android:visibility="gone"
                app:backgroundTint="@color/button_secondary"
                app:cornerRadius="32dp" />

        </FrameLayout>

    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

</FrameLayout>
